<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/previous"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top|left"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:soundEffectsEnabled="false"
            app:srcCompat="@drawable/previous_cube" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sarpanch_extrabold"
            android:gravity="center"
            android:text="@string/setting"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/main_text"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sound"
            style="@style/Widget.App.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/sarpanch_extrabold"
            android:minWidth="250dp"
            android:minHeight="58dp"
            android:text="@string/sound"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:track="@drawable/switch_track" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/vibration"
            style="@style/Widget.App.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarpanch_extrabold"
            android:minWidth="250dp"
            android:minHeight="58dp"
            android:text="@string/vibration"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:track="@drawable/switch_track" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/moving"
            style="@style/Widget.App.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarpanch_extrabold"
            android:minWidth="250dp"
            android:minHeight="58dp"
            android:text="@string/moving"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:visibility="gone"
            app:track="@drawable/switch_track" />


    </LinearLayout>

</LinearLayout>