<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Button.White"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarpanch_extrabold"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/main_text"
            android:textSize="68sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/playbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:maxWidth="200dp"
            android:maxHeight="65dp"
            android:minWidth="200dp"
            android:minHeight="65dp"
            android:soundEffectsEnabled="false"
            android:text="@string/play"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:maxWidth="200dp"
            android:maxHeight="65dp"
            android:minWidth="200dp"
            android:minHeight="65dp"
            android:soundEffectsEnabled="false"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:cornerRadius="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:soundEffectsEnabled="false">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:minWidth="200dp"
                android:soundEffectsEnabled="false"
                app:cardBackgroundColor="#3C3C3C"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/diff_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:backgroundTint="@android:color/transparent"
                    android:minWidth="200dp"
                    android:soundEffectsEnabled="false"
                    app:tabBackground="@drawable/track_selector"
                    app:tabGravity="fill"
                    app:tabIndicatorColor="@android:color/transparent"
                    app:tabIndicatorHeight="0dp"
                    app:tabMode="fixed"
                    app:tabRippleColor="@android:color/transparent"
                    app:tabSelectedTextColor="@android:color/black"
                    app:tabTextAppearance="@style/CustomTabTextAppearance"
                    app:tabTextColor="@android:color/white">

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/easy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:soundEffectsEnabled="false"
                        android:text="@string/easy"
                        tools:ignore="TouchTargetSizeCheck" />

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/hard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:soundEffectsEnabled="false"
                        android:text="@string/hard" />

                </com.google.android.material.tabs.TabLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>