<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:soundEffectsEnabled="false"
            app:srcCompat="@drawable/pause" />

        <TextView
            android:id="@+id/scoretext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/sarpanch_extrabold"
            android:text="@string/Score"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/main_text"
            android:textSize="56sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/highscoretext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sarpanch"
                android:text="@string/HighScore"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/main_text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/highscore_val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/sarpanch"
                android:text="@string/HighScore_val"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/main_text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:maxWidth="250dp"
            android:maxHeight="10dp"
            android:minWidth="235dp"
            android:minHeight="10dp"
            android:progressDrawable="@drawable/custom_progress_bg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn1"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="fill_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

                <Button
                    android:id="@+id/btn2"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

                <Button
                    android:id="@+id/btn3"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

                <Button
                    android:id="@+id/btn4"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn5"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

                <Button
                    android:id="@+id/btn6"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

                <Button
                    android:id="@+id/btn7"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

                <Button
                    android:id="@+id/btn8"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn9"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

                <Button
                    android:id="@+id/btn10"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

                <Button
                    android:id="@+id/btn11"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

                <Button
                    android:id="@+id/btn12"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn13"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

                <Button
                    android:id="@+id/btn14"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

                <Button
                    android:id="@+id/btn15"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />

                <Button
                    android:id="@+id/btn16"
                    style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/black"
                    android:gravity="clip_horizontal|center_vertical"
                    android:soundEffectsEnabled="false"
                    app:cornerRadius="28dp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>